# JsonBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  release.sh  run.sh
include/: Benchmark.hpp  Generator.hpp  JSON.hpp  Json.hpp  UI.hpp  Utils.hpp
include/Benchmark/: MyJson.hpp  NlohmannJson.hpp  Simdjson.hpp  Yyjson.hpp
src/: Benchmark.cpp  Generator.cpp  Json.cpp  UI.cpp  main.cpp
src/Benchmark/: MyJson.cpp  NlohmannJson.cpp  Simdjson.cpp  Yyjson.cpp
